# Taller-4-MLOPS

./: .dockerignore  Dockerfile  entregable.html  entregable.ipynb  environment.yml  model.joblib  pyproject.toml  requirements.txt
src/mlops_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pipeline/: __init__.py  pipeline.py
src/pipeline_ml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
